# wdf-sallenkey

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  analyze_frequency_response.py
analysis/: analyze_frequency_response.py  preprocess_ltspice.py  streamlit_app.py
analysis_cli/: CMakeLists.txt
analysis_cli/src/: FrequencyResponseAnalyzer.cpp  RealTimeFactorAnalyzer.cpp  Utils.cpp  Utils.h  WaveformAnalyzer.cpp
frequency_responses/: chowdsp_wdf_BandPass_order1_1000Hz.csv  chowdsp_wdf_BandPass_order2_1000Hz.csv  chowdsp_wdf_HighPass_order1_1000Hz.csv  chowdsp_wdf_HighPass_order2_1000Hz.csv  chowdsp_wdf_LowPass_order1_1000Hz.csv  chowdsp_wdf_LowPass_order2_1000Hz.csv  ltspice_BandPass_order1_1000Hz.csv  ltspice_BandPass_order2_1000Hz.csv  ltspice_HighPass_order1_1000Hz.csv  ltspice_HighPass_order2_1000Hz.csv  ltspice_LowPass_order1_1000Hz.csv  ltspice_LowPass_order2_1000Hz.csv  pywdf_BandPass_order1_1000Hz.csv  pywdf_BandPass_order2_1000Hz.csv  pywdf_HighPass_order1_1000Hz.csv  pywdf_HighPass_order2_1000Hz.csv  pywdf_LowPass_order1_1000Hz.csv  pywdf_LowPass_order2_1000Hz.csv
plugin/: CMakeLists.txt  SallenKey.jucer
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/include/SallenKey/: LowPassFilter.h  PluginEditor.h  PluginProcessor.h
plugin/include/WDFilters/: BandPassFilter.h  HighPassFilter.h  LowPassFilter.h  PluginProcessor.h  WDFilter.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp  WDFilter.cpp
plugins/DiodeClipper/: CMakeLists.txt
plugins/DiodeClipper/include/DiodeClipper/: PluginProcessor.h  WDFDiodeClipper.h
plugins/DiodeClipper/src/: PluginEditor.cpp  PluginProcessor.cpp  WDFDiodeClipper.cpp
plugins/WDFilters/: CMakeLists.txt
plugins/WDFilters/include/WDFilters/: BandPassFilter.h  HighPassFilter.h  LowPassFilter.h  PluginProcessor.h  WDFilter.h
plugins/WDFilters/src/: PluginEditor.cpp  PluginProcessor.cpp  WDFilter.cpp
prototypes/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
prototypes/butterworth/: frequency_response_analyzer.py  rc_1st2ndorder_bandpass.py  rc_2ndorder_highpass.py  rc_2ndorder_lowpass.py  rc_highpass.py  rc_lowpass.py
prototypes/ltspice/: bpf_1st_ord_100hz-1khz_cutoff.asc  bpf_2nd_ord_100hz-1khz_cutoff.asc  diode_clip_1st_ord.asc  diode_clip_2nd_ord.asc  diode_clip_3nd_ord.asc  hpf_1st_ord_100khz_cutoff.asc  hpf_1st_ord_1khz_cutoff.asc  hpf_2st_ord.asc  hpf_2st_ord_1khz_cutoff.asc  hpf_3st_ord.asc  lpf_1st_ord_100khz_cutoff.asc  lpf_1st_ord_1khz_cutoff.asc  lpf_2nd_ord.asc  lpf_2nd_ord_1khz_cutoff.asc  lpf_3rd_ord.asc
prototypes/ltspice/plots/: HighPass_order2_1000Hz.txt  LowPass_order2_1000Hz.txt  bpf_1st_ord_100hz-1khz_cutoff_plot.txt  bpf_2nd_ord_100hz-1khz_cutoff_plot.txt  hpf_1st_ord_1khz_cutoff_plot.txt  lpf_1st_ord_1khz_cutoff_plot.txt
prototypes/notebooks/: rchighpass.ipynb  rclowpass.ipynb
prototypes/plugins_playground/: SallenKey.jucer
prototypes/plugins_playground/Source/: PluginEditor.cpp
prototypes/src/: __init__.py  frequency_response_analyzer.py  rc_1st2ndorder_bandpass.py  rc_2ndorder_highpass.py  rc_2ndorder_lowpass.py  rc_highpass.py  rc_lowpass.py  real_time_factor_analyzer.py
prototypes/src_old/: frequency_response_analyzer.py  rc_lowpass.py
rtf_analysis/: cpp_rtf.txt  pywdf_rtf_analysis_1000Hz.csv
