[project]
name = "sallenkey-wdf"
version = "0.1.0"
description = "SallenKey prototypes"
authors = [
    {name = "Fernando Garcia",email = "fergarciadlc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pywdf @ git+https://github.com/gusanthon/pywdf",
    "librosa (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
